--- a/src/com/FitnessCenter/ui/ACE_FitnessCenterJFrame.form
+++ b/src/com/FitnessCenter/ui/ACE_FitnessCenterJFrame.form
@@ -108,7 +108,7 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jToolBar1" pref="1128" max="32767" attributes="0"/>
+          <Component id="jToolBar1" max="32767" attributes="0"/>
           <Component id="jPanel1" alignment="0" max="32767" attributes="0"/>
           <Component id="jDesktopPane1" alignment="0" max="32767" attributes="0"/>
       </Group>
