--- a/src/com/FitnessCenter/ui/ACE_FitnessCenterJFrame.form
+++ b/src/com/FitnessCenter/ui/ACE_FitnessCenterJFrame.form
@@ -223,7 +223,7 @@
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/Images/Brick house.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Thi&#x1ebf;t b&#x1ecb;"/>
+            <Property name="text" type="java.lang.String" value="Th&#x1ed1;ng K&#xea;"/>
             <Property name="focusable" type="boolean" value="false"/>
             <Property name="horizontalTextPosition" type="int" value="0"/>
             <Property name="verticalTextPosition" type="int" value="3"/>
